# WtTimeTrack

./: .gitignore  CMakeLists.txt  README.md  WtTimeTrack.cfg.template  WtTimeTrack.css  createTables.sql  updateTablesFrom01.00.00.sql  zeiterfassung.css
include/: Absence.h  AbsenceDialog.h  AbsenceList.h  AnnualStatement.h  CalendarCell.h  CalendarCellDialog.h  ClockView.h  CreditTime.h  DebitTime.h  DebitTimeDialog.h  DebitTimeList.h  EntryDialog.h  Holiday.h  HolidayDialog.h  HolidayList.h  MonthView.h  PlannerCalendar.h  Session.h  Updateable.h  User.h  UserDialog.h  UserList.h  WtTimeTrack.h  YearView.h  Zeiterfassung.h  utils.h
martin-installation/: WtTimeTrack.cfg  WtTimeTrack.css  createTables.sql  resources  wt_project  wt_project_mod
src/: AbsenceDialog.cc  AbsenceList.cc  CalendarCell.cc  CalendarCellDialog.cc  ClockView.cc  DebitTimeDialog.cc  DebitTimeList.cc  EntryDialog.cc  HolidayDialog.cc  HolidayList.cc  MonthView.cc  PlannerCalendar.cc  Session.cc  User.cc  UserDialog.cc  UserList.cc  WtTimeTrack.cc  YearView.cc  Zeiterfassung.cc  main.cc
